@@ -25,7 +25,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.IntStream;
@@ -51,7 +50,6 @@ public class CandidateStateTest {
             epoch,
             voters,
             Optional.empty(),
-            1,
             electionTimeoutMs,
             logContext
         );
@@ -63,7 +61,7 @@ public class CandidateStateTest {
         CandidateState state = newCandidateState(voterSetWithLocal(IntStream.empty(), withDirectoryId));
         assertTrue(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
-        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
     }
 
     @ParameterizedTest
@@ -75,7 +73,7 @@ public class CandidateStateTest {
         );
         assertFalse(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
-        assertEquals(Collections.singleton(otherNode), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(otherNode), state.epochElection().unrecordedVoters());
         assertTrue(state.recordRejectedVote(otherNode.id()));
         assertFalse(state.epochElection().isVoteGranted());
         assertTrue(state.epochElection().isVoteRejected());
@@ -90,9 +88,9 @@ public class CandidateStateTest {
         );
         assertFalse(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
-        assertEquals(Collections.singleton(otherNode), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(otherNode), state.epochElection().unrecordedVoters());
         assertTrue(state.recordGrantedVote(otherNode.id()));
-        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
         assertFalse(state.epochElection().isVoteRejected());
         assertTrue(state.epochElection().isVoteGranted());
     }
@@ -109,11 +107,11 @@ public class CandidateStateTest {
         assertFalse(state.epochElection().isVoteRejected());
         assertEquals(Set.of(node1, node2), state.epochElection().unrecordedVoters());
         assertTrue(state.recordGrantedVote(node1.id()));
-        assertEquals(Collections.singleton(node2), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(node2), state.epochElection().unrecordedVoters());
         assertTrue(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
         assertTrue(state.recordRejectedVote(node2.id()));
-        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
         assertTrue(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
     }
@@ -130,11 +128,11 @@ public class CandidateStateTest {
         assertFalse(state.epochElection().isVoteRejected());
         assertEquals(Set.of(node1, node2), state.epochElection().unrecordedVoters());
         assertTrue(state.recordRejectedVote(node1.id()));
-        assertEquals(Collections.singleton(node2), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(node2), state.epochElection().unrecordedVoters());
         assertFalse(state.epochElection().isVoteGranted());
         assertFalse(state.epochElection().isVoteRejected());
         assertTrue(state.recordRejectedVote(node2.id()));
-        assertEquals(Collections.emptySet(), state.epochElection().unrecordedVoters());
+        assertEquals(Set.of(), state.epochElection().unrecordedVoters());
         assertFalse(state.epochElection().isVoteGranted());
         assertTrue(state.epochElection().isVoteRejected());
     }
